# TramposoLibrary

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TramposoLibrary.sln  TramposoLibrary.vcxproj  TramposoLibrary.vcxproj.filters  main.cpp
docs/html/: _audio_manager_8cpp.html  _audio_manager_8cpp__incl.map  _audio_manager_8cpp__incl.md5  _audio_manager_8cpp_source.html  _audio_manager_8h.html  _audio_manager_8h.js  _audio_manager_8h__dep__incl.map  _audio_manager_8h__dep__incl.md5  _audio_manager_8h__incl.map  _audio_manager_8h__incl.md5  _audio_manager_8h_source.html  _catch_game_8cpp.html  _catch_game_8cpp.js  _catch_game_8cpp__incl.map  _catch_game_8cpp__incl.md5  _catch_game_8cpp_source.html  _collision_manager_8cpp.html  _collision_manager_8cpp__incl.map  _collision_manager_8cpp__incl.md5  _collision_manager_8cpp_source.html  _collision_manager_8h.html  _collision_manager_8h.js  _collision_manager_8h__dep__incl.map  _collision_manager_8h__dep__incl.md5  _collision_manager_8h__incl.map  _collision_manager_8h__incl.md5  _collision_manager_8h_source.html  _component_8h.html  _component_8h.js  _component_8h__dep__incl.map  _component_8h__dep__incl.md5  _component_8h_source.html  _game_8cpp.html  _game_8cpp__incl.map  _game_8cpp__incl.md5  _game_8cpp_source.html  _game_8h.html  _game_8h.js  _game_8h__dep__incl.map  _game_8h__dep__incl.md5  (+141 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  files_1.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_c.js  namespaces_0.js  searchdata.js  variables_0.js
include/TramposoLibrary/: AudioManager.h  CollisionManager.h  Component.h  Game.h  InputManager.h  PhysicsComponent.h  ResourceManager.h  Scene.h  Sprite.h
include/tramplib/: CollisionManager.h  Component.h  ConfigManager.h  Game.h  GameState.h  InputManager.h  PhysicsComponent.h  ResourceManager.h  Scene.h  Sprite.h  tramplib.h
src/: AudioManager.cpp  CatchGame.cpp  CollisionManager.cpp  ConfigManager.cpp  Game.cpp  InputManager.cpp  PhysicsComponent.cpp  ResourceManager.cpp  Scene.cpp  Sprite.cpp
tests/: ComponentTests.cpp  GameTests.cpp  SceneTests.cpp  SpriteTests.cpp
